# LEOGPS

./: .readthedocs.yaml  LICENSE  README.md  README.rst  debugger.py  leogps.py  pyproject.toml
codes/: __init__.py  ambest.py  ambfix.py  azimel.py  consts.py  dopest.py  einstn.py  gpsxtr.py  inpxtr.py  leogui.py  leorun.py  phasep.py  posvel.py  pubplt.py  rinxtr.py  rnpath.py  timing.py
config/: config.txt
docs/: conf.py  docs_cdgps1.rst  docs_cdgps2.rst  docs_firstrun.rst  docs_firststep.rst  docs_functions.rst  docs_install.rst  docs_process.rst  index.rst  requirements.txt
docs/_build/doctrees/: docs_cdgps1.doctree  docs_cdgps2.doctree  docs_firstrun.doctree  docs_firststep.doctree  docs_functions.doctree  docs_install.doctree  docs_process.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  docs_cdgps1.html  docs_cdgps2.html  docs_firstrun.html  docs_firststep.html  docs_functions.html  docs_install.html  docs_process.html  genindex.html  (+5 more)
example/: README.txt
hatanaka/: CRZ2RNX.BAT  RNX2CRZ.BAT
input/: COD15941.EPH  COD15942.EPH  COD15943.EPH  GRCB2080.10D  README.txt
output/: LEOGPS_Results.txt
output/gps_plots/: README.txt
output/gps_report/: README.txt
output/grace_truths/: README.txt  grc_kb_rng.csv
reference/: README.txt  grca_truth.csv  grcb_truth.csv
source/: __init__.py  ambest.py  ambfix.py  azimel.py  consts.py  dopest.py  einstn.py  frames.py  gpsxtr.py  inpxtr.py  leogui.py  leorun.py  phasep.py  posvel.py  pubplt.py  rinxtr.py  rnpath.py  rotate.py  timing.py
utils/hatanaka/: CRZ2RNX1.BAT  RNX2CRZ1.BAT
(+7 files in other folders)
